# hmi

./: LICENSE  README.md  meson.build
include/: Action.h  BasicShader.h  Camera.h  Display.h  Entity.h  Grid.h  Light.h  Loader.h  Maths.h  ModelTexture.h  ObjLoader.h  RawModel.h  Renderer.h  ShaderProgram.h  StaticShader.h  TexturedModel.h
include/glad/: glad.h
include/imgui/: imgui_impl_opengl3.h
shaders/: basic.vs  shader.fs  shader.vs
src/: Display.cpp  Loader.cpp  Maths.cpp  Renderer.cpp  ShaderProgram.cpp  glad.cpp  main.cpp
